# rust_hello_world

lesson_1/src/: main.rs
lesson_2/: Cargo.toml
lesson_2/src/: main.rs  operations.rs
lesson_9/: Cargo.toml  README.md
lesson_9/chat/: Cargo.toml  README.md
lesson_9/chat/src/: lib.rs
lesson_9/client/: Cargo.toml  README.md
lesson_9/client/src/: main.rs
lesson_9/server/: Cargo.toml  README.md  Rocket.toml  prometheus.yml
lesson_9/server/src/: admin.rs  main.rs  server.rs
lesson_9/server/templates/: 404.html.hbs  delete.html.hbs  delete_form.html.hbs  index.html.hbs  layout.html.hbs  messages.html.hbs  messages_form.html.hbs
src/: main.rs
