[package]
name = "chat"
version.workspace = true
edition.workspace = true
description = "Library for simple chat app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = {version = "1.0.203", features = ["derive"]}
