[package]
name = "client"
version.workspace = true
edition.workspace = true
description = "Client for simple chat app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat = {path = "../chat"}
serde = "1.0.203"
serde_json = "1.0.117"
slugify = "0.1.0"
rodio = { version = "0.18.1", features = ["wav"] }
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
