[package]
name = "server"
version.workspace = true
edition.workspace = true
description = "Server for simple chat app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chat = {path = "../chat"}
env_logger = "0.11.3"
log = "0.4.21"
parking_lot = "0.12.3"
tokio = { version = "1.38.0", features = ["full"] }
